# l6_autodoc

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
src/autodoc/: __init__.py  base_people.py  helloworld.py
test/: test_base_peoply.py  test_helloworld.py
